--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2251,4 +2251,8 @@
     <!-- Whether to start in touch mode -->
     <bool name="config_defaultInTouchMode">true</bool>
     <bool name="config_enable_14digit_imei">false</bool>
+
+    <!-- The list of components which should be automatically disabled. -->
+    <string-array name="config_disabledComponents" translatable="false">
+    </string-array>
 </resources>
