PackageManager: allow build-time disabling of components
Allow components to be specified as disabled at build time
(applied on boot).

This allows stock OTA components to be marked as disabled in
CM builds.

Change-Id: I6e4499cc40a779792a5ea97a10137399dad7d69f
Signed-off-by: Louis Popi <theh2o64@gmail.com>

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2370,4 +2370,7 @@
   <java-symbol type="bool" name="config_protocol_errors_perm_failure" />
 
   <java-symbol type="bool" name="config_wifiApFirmwareReload" />
+
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
 </resources>
