--- a/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
+++ b/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
@@ -70,17 +70,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/data_combo"
-        android:visibility="gone"
+        android:visibility="visible"
         >
-        <View
-            android:layout_width="6dp"
-            android:layout_height="6dp"
-            android:visibility="invisible"
-            />
         <ImageView
             android:id="@+id/data_inout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
             />
     </FrameLayout>
     <FrameLayout
@@ -170,15 +166,11 @@
         android:id="@+id/data_combo_sub2"
         android:visibility="gone"
         >
-        <View
-            android:layout_width="6dp"
-            android:layout_height="6dp"
-            android:visibility="invisible"
-            />
         <ImageView
             android:id="@+id/data_inout_sub2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
             />
     </FrameLayout>
     <FrameLayout
@@ -245,15 +237,11 @@
         android:id="@+id/data_combo_sub3"
         android:visibility="gone"
         >
-        <View
-            android:layout_width="6dp"
-            android:layout_height="6dp"
-            android:visibility="invisible"
-            />
         <ImageView
             android:id="@+id/data_inout_sub3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
             />
     </FrameLayout>
     <FrameLayout
