--- a/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
+++ b/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
@@ -37,6 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             />
+        <ImageView
+            android:id="@+id/wifi_inout"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center|bottom"
+            />
     </FrameLayout>
     <!--<FrameLayout
         android:id="@+id/wimax_combo"
